fix: overflow-x

--- a/app/assets/sass/_layout.scss
+++ b/app/assets/sass/_layout.scss
@@ -11,6 +11,7 @@ body {
 html {
   background-color: #140e17;
   height: 100%;
+  overflow-x: hidden;
   width: 100%;
 }
 
